--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,572 @@
+* {
+  box-sizing: border-box;
+}
 
+html {
+  font-family: "Rubik", sans-serif;
+}
+
+body {
+  margin: 0;
+  color: #ded8e8;
+  background: radial-gradient(ellipse at top left, #8845fc, #3c02a1);
+  min-height: 100vh;
+}
+
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+main {
+  margin: 2rem auto;
+  max-width: 45rem;
+}
+
+button {
+  font: inherit;
+  cursor: pointer;
+  padding: 0.5rem 1.75rem;
+  border-radius: 4px;
+}
+
+#main-header {
+  padding: 1rem 10%;
+  display: grid;
+  grid-template-columns: 35% 30% 35%;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+#main-header ul {
+  display: flex;
+  gap: 2rem;
+  flex: 1;
+}
+
+#logo {
+  color: #ede3fd;
+  font-size: 1.15rem;
+  justify-self: start;
+}
+
+#logo a {
+  color: inherit;
+}
+
+.cta {
+  padding: 0.5rem 2rem;
+  background-color: #9900ff;
+  color: #ede3fd;
+  border-radius: 30px;
+  border: none;
+  display: inline-flex;
+  gap: 0.5rem;
+  align-items: center;
+  font: inherit;
+  cursor: pointer;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+.cta:hover {
+  background-color: #8400ff;
+}
+
+#cta-nav {
+  justify-self: end;
+}
+
+#cta-nav ul {
+  gap: 0;
+}
+
+.cta-alt {
+  background-color: transparent;
+  color: #ede3fd;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+}
+
+.cta-alt:hover {
+  color: #af82fc;
+}
+
+#main-nav a {
+  color: #af82fc;
+}
+
+#main-nav a:hover,
+#main-nav a.active {
+  color: #ede3fd;
+}
+
+.form-actions {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal {
+  position: fixed;
+  top: 25vh;
+  width: 30rem;
+  border-radius: 6px;
+  border: none;
+  background-color: #f0eafa;
+  animation: fade-slide-down 0.5s ease-out forwards;
+}
+
+.error {
+  text-align: center;
+}
+
+.error .icon {
+  font-size: 3rem;
+}
+
+.error h1,
+.error h2 {
+  margin: 0.5rem 0;
+  color: white;
+}
+
+.error a {
+  color: #c9aaff;
+}
+
+.form {
+  padding: 2rem;
+  color: #96929d;
+}
+
+.form p {
+  margin: 0.25rem 0;
+}
+
+.form label,
+.form input {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.form input {
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 6px;
+  border: none;
+  width: 100%;
+  color: #69666f;
+}
+
+.form-row {
+  display: flex;
+  gap: 2rem;
+  text-align: left;
+}
+
+.form-row p {
+  flex: 1;
+}
+
+.form-actions {
+  margin-top: 2rem;
+  align-items: center;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.form button {
+  background-color: #9900ff;
+  color: #f0eafa;
+  border: none;
+  border-radius: 30px;
+  padding: 0.65rem 2rem;
+  font-size: 0.85rem;
+}
+
+.form button:hover {
+  background-color: #8400ff;
+}
+
+.form button:disabled,
+.form button:disabled:hover {
+  background-color: #ded8e8;
+  color: #aba6b3;
+  cursor: not-allowed;
+}
+
+.form a {
+  font-size: 0.75rem;
+  color: #c9aaff;
+}
+
+.form a:hover {
+  color: #af82fc;
+}
+
+@keyframes fade-slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes fade-slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-1rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+#auth-form {
+  max-width: 24rem;
+  margin: 2rem auto;
+  border-radius: 8px;
+  background-color: #975bfd;
+  color: #f6f2fc;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  animation: fade-slide-up 1.5s ease-out forwards;
+  text-align: center;
+}
+
+#auth-form input {
+  text-align: center;
+}
+
+#auth-form a {
+  font-size: 0.75rem;
+  color: #ede3fd;
+}
+
+#auth-form a:hover {
+  color: #c9aaff;
+}
+
+.icon-img {
+  border: 2px solid #ede3fd;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  width: 4rem;
+  height: 4rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.icon-img svg {
+  animation: fade-slide-up 1.5s ease-out forwards;
+}
+
+#no-expenses {
+  text-align: center;
+}
+
+#no-expenses a {
+  color: #af82fc;
+}
+
+#expenses-actions {
+  margin: 2rem 0;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+#expenses-actions a {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  color: #3c02a1;
+  background-color: #ede3fd;
+  padding: 0.5rem 1.5rem;
+  border-radius: 30px;
+}
+
+#expenses-actions a:hover {
+  background-color: #ded8e8;
+}
+
+#expenses-actions a:last-of-type {
+  background-color: transparent;
+  color: #f6f2fc;
+}
+
+#expenses-actions a:last-of-type:hover {
+  background-color: transparent;
+  color: #ded8e8;
+}
+
+#expenses-list {
+  max-width: 32rem;
+  margin: 2rem auto;
+}
+
+.expense-item {
+  margin: 1.5rem 0;
+  padding: 1rem;
+  background-color: #8845fc;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  color: #f6f2fc;
+}
+
+.expense-item.locked {
+  justify-content: center;
+  background-color: #975bfd;
+}
+
+.expense-title {
+  margin: 0;
+}
+
+.expense-amount {
+  margin: 0;
+}
+
+.expense-actions {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.expense-actions button,
+.expense-actions a {
+  background-color: transparent;
+  border: none;
+  color: #f6f2fc;
+  padding: 0;
+}
+
+.expense-actions button:hover,
+.expense-actions a:hover {
+  color: #af82fc;
+}
+
+#expense-form {
+  padding: 1rem;
+}
+
+#expense-form .form-actions {
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+}
+
+#expense-form a {
+  color: #96929d;
+}
+
+#expense-form a:hover {
+  color: #7f7b85;
+}
+
+.chart {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  justify-items: center;
+  gap: 0.75rem;
+  padding: 1.5rem;
+  border-radius: 6px;
+  border: 2px solid #f6f2fc;
+}
+
+.chart-bar--inner {
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.chart-bar--fill {
+  border-radius: 4px;
+  background-color: #975bfd;
+}
+
+.chart-bar--label {
+  margin-top: 0.5rem;
+}
+
+#expense-statistics {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 2rem;
+}
+
+#expense-statistics dt {
+  color: #af82fc;
+}
+
+#expense-statistics dd {
+  margin: 0;
+  color: #ede3fd;
+  font-size: 2rem;
+}
+
+.marketing-section {
+  margin: 6rem auto;
+}
+
+.marketing-section header {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  color: #c9aaff;
+}
+
+.marketing-section:last-of-type {
+  text-align: right;
+}
+
+.marketing-section:last-of-type header {
+  justify-content: flex-end;
+}
+
+.marketing-section svg {
+  font-size: 1.25rem;
+}
+
+.marketing-section h2 {
+  margin: 0;
+}
+
+.marketing-content {
+  display: flex;
+  gap: 2rem;
+  margin: 3rem 0;
+}
+
+.marketing-image {
+  width: 50%;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  padding: 0.5rem;
+  background-color: #af82fc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotateZ(-5deg);
+}
+
+.marketing-image:last-child {
+  transform: rotateZ(5deg);
+}
+
+.marketing-image img {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.marketing-explanation {
+  width: 50%;
+}
+
+#pricing {
+  text-align: center;
+}
+
+#pricing-plans {
+  width: 36rem;
+  margin: 3rem auto;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.plan {
+  background-color: white;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  color: #7f7b85;
+  width: 50%;
+}
+
+.plan header {
+  padding: 1rem;
+}
+
+.plan .icon {
+  width: 4rem;
+  height: 4rem;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border: 2px solid white;
+  border-radius: 50%;
+  margin: 1rem auto;
+}
+
+.plan:first-of-type header {
+  background-color: #975bfd;
+}
+
+.plan:last-of-type header {
+  background-color: #7223fa;
+}
+
+.plan h2,
+.plan p {
+  margin: 0;
+  color: #f6f2fc;
+}
+
+.plan header p {
+  font-size: 0.85rem;
+  margin-top: 0.5rem;
+}
+
+.plan li {
+  margin: 1rem 0;
+}
+
+.plan-content {
+  padding: 1rem;
+}
+
+.plan .actions {
+  margin: 3rem 0 1.5rem 0;
+}
+
+.plan a {
+  background-color: #9900ff;
+  color: #f6f2fc;
+  padding: 0.75rem 2rem;
+  border-radius: 30px;
+}
+
+.plan a:hover {
+  background-color: #8400ff;
+}
 
 /*# sourceMappingURL=main.css.map */
